--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/app-01.js"></script>
-    <script src="js/app-02.js"></script>
-    <script src="js/app-03.js"></script>
+    <!-- <script src="js/app-01.js"></script>
+    <script src="js/app-02.js"></script> -->
+    <!-- <script src="js/app-03.js"></script> -->
+    <script src="js/app-04.js"></script>
 </body>
 </html>
